--- a/src/components/formulario.module.css
+++ b/src/components/formulario.module.css
@@ -15,6 +15,8 @@
     margin-bottom: 16px;
     padding: 5px 12px;
     line-height: 20px;
+    font-family: inherit;
+    font-size: 14px;
 }
 
 .formulario input:focus-visible{
@@ -36,8 +38,9 @@ input#signInButton{
     font-weight: 550;
     color: white;
     margin-bottom: 0px;
+    cursor: pointer;
 }
 
-input[type=submit]{
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+input#signInButton:hover{
+    background-color: #2c974b;
 }
