footer feito e favicon alterado.

--- a/src/components/cadastrese.module.css
+++ b/src/components/cadastrese.module.css
@@ -5,6 +5,7 @@
     border: 1px solid hsla(210,18%,87%,1);
     font-size: 14px;
     margin-top: 16px;
+    margin-bottom: 0px;
 }
 
 .cadastrese a{
